fixed poll links

--- a/mysite/polls/templates/polls/results.html
+++ b/mysite/polls/templates/polls/results.html
@@ -8,4 +8,4 @@
 
 <a href="{% url 'polls:detail' question.id %}">Vote again?</a>
 
-<p><a href="{% url 'polls:index'}">Polls</a></p>
+<p><a href="/polls/">Polls</a></p>
