--- a/mysite/polls/templates/polls/detail.html
+++ b/mysite/polls/templates/polls/detail.html
@@ -1,3 +1,6 @@
+{% load static %}
+<link rel="stylesheet" type="text/css" href="{% static 'polls/better.css' %}" />
+
 <h1>{{question.question_text}}</h1>
 
 {% if error_message %}<p><strong>{{error_message}}</strong</p>{% endif %}
