--- a/mysite/polls/templates/polls/index.html
+++ b/mysite/polls/templates/polls/index.html
@@ -1,3 +1,7 @@
+{% load static %}
+<link rel="stylesheet" type="text/css" href="{% static 'polls/better.css' %}" />
+
+<h1>Latest Polls</h1>
 {% if latest_question_list %}
 	<ul>
 	{% for question in latest_question_list %}
